Guessing and onwards