@@ -18,5 +18,5 @@
 source "$HOME/.sdkman/bin/sdkman-init.sh"
 sdk use java 21.0.1-graal 1>&2
 
-JAVA_OPTS="-server -Xnoclassgc -Xmx1G"
+JAVA_OPTS="-server -Xnoclassgc -Xmx1G -XX:-TieredCompilation -XX:CICompilerCount=1 --enable-preview"
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_ags313
